# stm32f2xx_drivers

./: .gitignore  CMakeLists.txt  README.md
cmsis/: CMakeLists.txt
hal/: CMakeLists.txt
